<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spotifyStreamer">SPOTIFY STREAMER</string>
    <string name="scoresApp">SCORES APP</string>
    <string name="libraryApp">LIBRARY APP</string>
    <string name="buildItBigger">BUILD IT BIGGER</string>
    <string name="xyzReader">XYZ READER</string>
    <string name="capstoneMyApp">CAPSTONE: MY OWN APP</string>
    <string name="myNanoDegreeApps">My Nanodegree Apps!</string>
    <string name="buttonClickToastMessageFormat">This button will launch my %s app!</string>
</resources>
